# aequitas-mas

./: .gitignore  CLAUDE.md  DOC_AUDIT_REPORT.md  README.md  list_models.py  main.py  pyproject.toml  setup.md  test_gemini.py
.ai/: aidd-001-unified-system-prompt.md  aidd-002-superpowers-sdd-planner.md  aidd-003-tech-lead-mentor-prompt.md  aidd-004-documentation-integrity-audit.md  context.md
.ai-studio/: scientist-protocol.md
.ai/adr/: 002-hyde-rag-pipeline.md  (+16 more)
.claude/: settings.json
.context/: GEM_INSTRUCTIONS.md  PLAN.md  SPEC.md  current-sprint.md
.gemini/: architect-eod-protocol.md  settings.json  styleguide.md
.github/: copilot-instructions.md
.notebooklm/: research-protocol.md
.semgrep/: dogma-rules.yml
scripts/: check_mcp_prerequisites.sh  setup_env.sh  validate_delivery.sh
tests/: conftest.py  test_api_analyze_router.py  test_api_backtest.py  test_api_backtest_router.py  test_api_dependencies.py  test_api_portfolio.py  test_api_portfolio_router.py  test_api_schemas.py  test_api_serverless.py  test_audit_adapter.py  test_b3_fetcher.py  test_backtesting_data_loader.py  test_backtesting_engine.py  test_backtesting_metrics.py  test_benchmark_fetcher.py  test_core_consensus_node.py  test_dynamo_saver.py  test_fisher_agent.py  test_graham_agent.py  test_graham_valuation.py  test_graph.py  test_graph_routing.py  test_historical_ingestion.py  test_interface_contracts.py  test_llm.py  test_macro_agent.py  test_marks_agent.py  test_news_fetcher.py  test_portfolio_constraints.py  test_portfolio_optimizer.py  test_rag_evaluator.py  test_telemetry.py
(+183 files in other folders)
